# libclangex

./: .gitmodules  CMakeLists.txt  COPYRIGHT  LICENSE  LICENSE.md  README.md  build_local.jl
.github/workflows/: CI.yml
cmake/: install_config.cmake  public_headers.cmake
include/: CXASTConsumer.h  CXASTContext.h  CXASTUnit.h  CXCodeGen.h  CXCodeGenOptions.h  CXCompilerInstance.h  CXCompilerInvocation.h  CXDiagnostic.h  CXDiagnosticOptions.h  CXDriver.h  CXError.h  CXFileManager.h  CXIntrusiveRefCntPtr.h  CXMemoryBuffer.h  CXOptions.h  CXParser.h  CXPreprocessor.h  CXQualType.h  CXSema.h  CXSourceManager.h  CXStringEx.h  CXTranslationUnit.h  CXTriple.h  CXTypes.h  libclangex.h
include/clang-ex/: CXASTContext.h  CXCodeGen.h  CXCompilerInvocation.h  CXDiagnostic.h  CXFileManager.h  CXOptions.h  CXParser.h  CXPreprocessor.h  CXQualType.h  CXSema.h  CXSourceManager.h  CXTypes.h  libclangex.h
include/clang-ex/AST/: CMakeLists.txt  CXASTContext.h  CXDecl.h  CXDeclBase.h  CXDeclCXX.h  CXDeclarationName.h  CXMangle.h  CXTemplateBase.h  CXTemplateName.h  CXType.h
include/clang-ex/Basic/: CMakeLists.txt  CXExceptionSpecificationType.h  CXLinkage.h  CXPragmaKinds.h  CXSourceLocation.h  CXSpecifiers.h  CXVisibility.h
include/clang-ex/CodeGen/: CMakeLists.txt  CXModuleBuilder.h
include/clang-ex/Interpreter/: CMakeLists.txt  CXInterpreter.h  CXPartialTranslationUnit.h
lib/: CMakeLists.txt  CXASTConsumer.cpp  CXASTContext.cpp  CXCodeGen.cpp  CXCompilerInstance.cpp  CXCompilerInvocation.cpp  CXDiagnostic.cpp  CXDriver.cpp  CXFileManager.cpp  CXOptions.cpp  CXParser.cpp  CXPreprocessor.cpp  CXQualType.cpp  CXSema.cpp  CXSourceManager.cpp  libclangex.cpp
lib/AST/: CMakeLists.txt  CXASTContext.cpp  CXDecl.cpp  CXDeclBase.cpp  CXDeclCXX.cpp  CXDeclarationName.cpp  CXMangle.cpp  CXQualType.cpp  CXType.cpp
lib/Basic/: CXSourceLocation.cpp
lib/CodeGen/: CMakeLists.txt  CXModuleBuilder.cpp
lib/Frontend/: CXCompilerInstance.cpp
lib/Interpreter/: CMakeLists.txt  CXInterpreter.cpp  CXPartialTranslationUnit.cpp
src/: CXASTConsumer.cpp  CXASTContext.cpp  CXASTUnit.cpp  CXCodeGen.cpp  CXCodeGenOptions.cpp  CXCompilerInstance.cpp  CXCompilerInvocation.cpp  CXDiagnostic.cpp  CXDiagnosticOptions.cpp  CXDriver.cpp  CXFileManager.cpp  CXMemoryBuffer.cpp  CXOptions.cpp  CXParser.cpp  CXPreprocessor.cpp  CXQualType.cpp  CXSema.cpp  CXSourceManager.cpp  CXTriple.cpp  libclangex.cpp
